Fix: Prevents content from running off screen

--- a/src/App.css
+++ b/src/App.css
@@ -83,4 +83,9 @@ footer {
   border: 1px solid black;
   align-items: center;
   padding: 4px 0;
+  margin-top: 16px;
+}
+
+div.certification-details, div.certification-list, div.project-details, div.project-list {
+  max-width: 90%
 }
